--- a/PurchaseDemoAsync-NET472/packages.config
+++ b/PurchaseDemoAsync-NET472/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DataMeshGroup.Fusion.FusionClient" version="1.0.8" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net452" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net452" requireReinstallation="true" />
-  <package id="System.Net.WebSockets.Client.Managed" version="1.0.22" targetFramework="net452" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="DataMeshGroup.Fusion.FusionClient" version="1.1.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
 </packages>
